
sql_SCRIPTS = 

sql_DATA = \
	openDIAS.sqlite3.dmp.v1.sql \
	openDIAS.sqlite3.dmp.v2.sql \
	openDIAS.sqlite3.dmp.v3.sql \
	openDIAS.sqlite3.dmp.v4.sql \
	openDIAS.sqlite3.dmp.v5.sql \
	openDIAS.sqlite3.dmp.v6.sql

sqldir = \
	$(pkgdatadir)

EXTRA_DIST = \
	$(sql_DATA)

## File created by the gnome-build tools

