
sql_SCRIPTS = 

sql_DATA = \
	openDIAS.sqlite3.dmp.v1.sql \
	openDIAS.sqlite3.dmp.v2.sql \
	openDIAS.sqlite3.dmp.v3.sql \
	openDIAS.sqlite3.dmp.v4.sql \
	openDIAS.sqlite3.dmp.v5.sql \
	openDIAS.sqlite3.dmp.v6.sql \
	openDIAS.sqlite3.dmp.v7.sql \
	openDIAS.sqlite3.dmp.v8.sql

sqldir = \
	$(pkgdatadir)

EXTRA_DIST = \
	$(sql_DATA)

